# TextWordReplacer

./: CMakeLists.txt
include/: TextWordReplacer.h
src/: TextWordReplacer.cpp  main.cpp
tests/: test_replacer.cpp
